--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -79,7 +79,7 @@
 //--------- Start Banner Area -------------//
 
 .banner-area {
-	background:url(../img/header-bg.jpg) center;
+	background:url(../img/header-bg.) center;
 	background-size:cover;
 	.overlay-bg{
 		background-color:rgba(#000,.7); 
@@ -411,12 +411,18 @@
 	  width: 100%;
 	  margin: auto;
 	  overflow: hidden;
+	  .fixed_img{
+		width: 100% !important;
+		height: auto !important;
+	  }
 	}
 
 	.grid-item {
 	  opacity: 0;
 	  float: left;
 	  box-sizing: border-box;
+	  width: 100% !important;
+		height: auto !important;
 	}
 
 	.grid-item img {
@@ -427,6 +433,8 @@
 	.grid-item.loaded {
 	  opacity: 1;
 	  transition: opacity .5s;
+	  width: 100% !important;
+		height: auto !important;
 	}
 }
 
